updated PlayerTest